--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:black;">
-<title>(Hidden) Mixtapes</title>
+<title>Walrus' Year In Review</title>
 
 <center>
 
@@ -13,6 +13,20 @@
 <table>
 <tbody>
 
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Mixtape</p></font>
+</td>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records of the Year</p></font>
+</td>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Calendar</p></font>
+</td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+  
 <tr>
 <td>
 <font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// 15from2020 ///</p></font>
@@ -96,4 +110,5 @@
 
 </body>
 </html>
+
 
