--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <center>
 
-<h2><font color="#ffffff" face="Consolas">Mixtapes</h2></font>
+<h2><font color="#ffffff" face="Consolas">Walrus' Year In Review</h2></font>
 
 <br>
 <br>
@@ -18,10 +18,28 @@
 <font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Mixtape</p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records of the Year</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records</p></font>
 </td>
 <td>
 <font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Calendar</p></font>
+</td>
+</tr>
+
+<tr><td><br><hr>2025<br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// 15from2020 ///</p></font>
+</td>
+</tr>
+<tr>
+<td><a target="_blank" href=""><img style="width: 250px;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px;" src="img/records_2025.jpg" border="0" alt="records_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px;" src="img/calendar_2026.jpg" border="0" alt="calendar_2026.jpg"></img></a></td>
+</tr>
+<tr>
+<td>&nbsp;
+<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Tracks // 58:55 // Mit &Uuml;berg&auml;ngen</span></span></span></span></p>
 </td>
 </tr>
 
@@ -110,5 +128,6 @@
 
 </body>
 </html>
+
 
 
