--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <tr>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Mixtape</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Mixtape</p></font>
 </td>
 <td>
 <font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records</p></font>
@@ -25,7 +25,7 @@
 </td>
 </tr>
 
-<tr><td><br><hr>2025<br><br></td></tr>
+<tr><td><br><font color="#ffffff">2025</font><hr><br><br></td></tr>
 
 <tr>
 <td>
@@ -128,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
