--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <center>
 
-<h2><font color="#ffffff" face="Consolas">Walrus' Year In Review</h2></font>
+<h2><font color="#ffffff" face="Bahnschrift">Walrus' Year In Review</h2></font>
 
 <br>
 <br>
@@ -18,18 +18,18 @@
 <font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Mixtape</p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records</p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Calendar</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Calendar</p></font>
 </td>
 </tr>
 
-<tr><td><br><font color="#ffffff">2025</font><hr><br><br></td></tr>
+<tr><td><br><hr><br><br></td></tr>
 
 <tr>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// 15from2020 ///</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm; font-weight:bold;">/// 2025 ///</p></font>
 </td>
 </tr>
 <tr>
@@ -44,15 +44,16 @@
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
-  
+
 <tr>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// 15from2020 ///</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm; font-weight:bold;">/// 2024 ///</p></font>
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href="https://www.dropbox.com/s/cedcjs7n3imqraw/15from2020.zip?dl=0"><img style="width: 200px;" src="img/cover2020.jpg" border="0" alt=""></img></a></td>
-<td><em><font color="#ffffff">15 der Songs die 2020 gerettet haben.</font></em></td>
+<td><a target="_blank" href=""><img style="width: 250px;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px;" src="img/records_2024.jpg" border="0" alt="records_2024.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
 </tr>
 <tr>
 <td>&nbsp;
@@ -61,41 +62,6 @@
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
-
-<tr>
-<td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// 15from2019 ///</p></font>
-</td>
-</tr>
-<tr>
-<td><a target="_blank" href="https://www.dropbox.com/s/saqfd3985rxzb52/15from2019.zip?dl=0"><img style="width: 200px;" src="img/cover_2019.jpg" border="0" alt=""></img></a></td>
-<td><em><font color="#ffffff">Diese 15 Songs haben ein maues Musikjahr 2019 besser gemacht.</font></em></td>
-</tr>
-<tr>
-<td>&nbsp;
-<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Tracks // 1:06:05 // Mit &Uuml;berg&auml;ngen</span></span></span></span></p>
-</td>
-</tr>
-
-<tr><td><br><hr><br><br></td></tr>
-
-<tr>
-<td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Calibri; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// 15from2018 ///</p></font>
-</td>
-</tr>
-<tr>
-<td><a target="_blank" href="https://www.dropbox.com/s/umv5remkykzo9cg/15from2018.zip?dl=0"><img style="width: 200px;" src="img/cover_2018.jpg" border="0" alt=""></img></a></td>
-<td><em><font color="#ffffff">15 hervorragende Liedchen aus dem tollen Musikjahr 2018.</font></em></td>
-</tr>
-<tr>
-<td>&nbsp;
-<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Tracks // 1:19:56 // Mit &Uuml;berg&auml;ngen</span></span></span></span></p>
-</td>
-</tr>
-
-<tr><td><br><hr><br><br></td></tr>
-
 
 <tr><td><br><hr><hr></td></tr>
 <tr><td><p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">also available:</p></td></tr>
@@ -128,6 +94,7 @@
 
 </body>
 </html>
+
 
 
 
