--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <tr>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Mixtape</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; font-weight:bold;">/// Mixtape</p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Records</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; font-weight:bold;">/// Records</p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.353cm; font-weight:bold;">/// Calendar</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; font-weight:bold;">/// Calendar</p></font>
 </td>
 </tr>
 
@@ -33,14 +33,9 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px;" src="img/records_2025.jpg" border="0" alt="records_2025.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px;" src="img/calendar_2026.jpg" border="0" alt="calendar_2026.jpg"></img></a></td>
-</tr>
-<tr>
-<td>&nbsp;
-<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Tracks // 58:55 // Mit &Uuml;berg&auml;ngen</span></span></span></span></p>
-</td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2025.jpg" border="0" alt="records_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/calendar_2026.jpg" border="0" alt="calendar_2026.jpg"></img></a></td>
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
@@ -94,6 +89,7 @@
 
 </body>
 </html>
+
 
 
 
