--- a/index.html
+++ b/index.html
@@ -46,20 +46,28 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px;" src="img/records_2024.jpg" border="0" alt="records_2024.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2024.jpg" border="0" alt="records_2024.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm; font-weight:bold;">/// 2023 ///</p></font>
+</td>
 </tr>
 <tr>
-<td>&nbsp;
-<p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">15 Tracks // 58:55 // Mit &Uuml;berg&auml;ngen</span></span></span></span></p>
-</td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/cover_2023.jpg" border="0" alt="cover_2023.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2023.jpg" border="0" alt="records_2023.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/calendar_2024.jpg" border="0" alt="calendar_2024.jpg"></img></a></td>
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
 
 <tr><td><br><hr><hr></td></tr>
-<tr><td><p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">also available:</p></td></tr>
+<tr><td><p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">last update: 29.12.25</p></td></tr>
 
 
 </tbody>
@@ -89,6 +97,7 @@
 
 </body>
 </html>
+
 
 
 
