--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
   
 <tr><td><br><hr><hr></td></tr>
 <tr><td><p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">last update: 29.12.25</p></td></tr>
+<tr><td><img src="img/bc.png" border="0" alt="bc.png"></img><a target="_blank" href="https://bandcamp.com/flyingwalrus">https://bandcamp.com/flyingwalrus</a></td></tr>  
 
 
 </tbody>
@@ -160,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
