--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </tr>
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/cover_2020.jpg" border="0" alt="cover_2020.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2020.jpg" border="0" alt="records_2020.jpg"></img></a></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2020.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2020.jpg" border="0" alt="records_2020.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/calendar_2021.jpg" border="0" alt="calendar_2021.jpg"></img></a></td>
 </tr>
 
@@ -112,7 +112,7 @@
 </tr>
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/cover_2019.jpg" border="0" alt="cover_2019.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2019.jpg" border="0" alt="records_2019.jpg"></img></a></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2019.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/records_2019.jpg" border="0" alt="records_2019.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.5cm;" src="img/calendar_2020.jpg" border="0" alt="calendar_2020.jpg"></img></a></td>
 </tr>
 
@@ -131,7 +131,7 @@
   
 <tr><td><br><hr><hr></td></tr>
 <tr><td><p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">last update: 29.12.25</p></td></tr>
-<tr><td><img src="img/bc.png" border="0" alt="bc.png"></img><a target="_blank" href="https://bandcamp.com/flyingwalrus">https://bandcamp.com/flyingwalrus</a></td></tr>  
+<tr><td><img style="width: 32px;" src="img/bc.png" border="0" alt="bc.png"></img><a target="_blank" href="https://bandcamp.com/flyingwalrus"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">https://bandcamp.com/flyingwalrus</a></td></tr>  
 
 
 </tbody>
@@ -161,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
