--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2025.jpg" border="0" alt="cover_2025.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2025.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2025.jpg" border="0" alt="records_2025.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2026.jpg" border="0" alt="calendar_2026.jpg"></img></a></td>
 </tr>
@@ -46,9 +46,9 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2024.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2024.jpg" border="0" alt="records_2024.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 200px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
@@ -59,7 +59,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2023.jpg" border="0" alt="cover_2023.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2023.jpg" border="0" alt="cover_2023.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2023.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2023.jpg" border="0" alt="records_2023.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2024.jpg" border="0" alt="calendar_2024.jpg"></img></a></td>
 </tr>
@@ -72,7 +72,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2022.jpg" border="0" alt="cover_2022.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2022.jpg" border="0" alt="cover_2022.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2022.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2022.jpg" border="0" alt="records_2022.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2023.jpg" border="0" alt="calendar_2023.jpg"></img></a></td>
 </tr>
@@ -85,7 +85,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2021.jpg" border="0" alt="cover_2021.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2021.jpg" border="0" alt="cover_2021.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2021.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2021.jpg" border="0" alt="records_2021.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2022.jpg" border="0" alt="calendar_2022.jpg"></img></a></td>
 </tr>
@@ -98,7 +98,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2020.jpg" border="0" alt="cover_2020.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2020.jpg" border="0" alt="cover_2020.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2020.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2020.jpg" border="0" alt="records_2020.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2021.jpg" border="0" alt="calendar_2021.jpg"></img></a></td>
 </tr>
@@ -111,7 +111,7 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2019.jpg" border="0" alt="cover_2019.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2019.jpg" border="0" alt="cover_2019.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2019.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2019.jpg" border="0" alt="records_2019.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2020.jpg" border="0" alt="calendar_2020.jpg"></img></a></td>
 </tr>
@@ -124,14 +124,14 @@
 </td>
 </tr>
 <tr>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2018.jpg" border="0" alt="records_2018.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2019.jpg" border="0" alt="calendar_2019.jpg"></img></a></td>
 </tr>
   
 <tr><td><br><hr><hr></td></tr>
 <tr><td><p style="margin-bottom: 0.35cm; font-weight: normal; line-height: 115%;" align="left"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">last update: 29.12.25</p></td></tr>
-<tr><td><img style="width: 32px;" src="img/bc.png" border="0" alt="bc.png"></img><a target="_blank" href="https://bandcamp.com/flyingwalrus"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">https://bandcamp.com/flyingwalrus</a></td></tr>  
+<tr><td><img style="width: 20px;" src="img/bc.png" border="0" alt="bc.png"></img><a target="_blank" href="https://bandcamp.com/flyingwalrus"><span style="color: #ffffff;"><span style="font-family: Consolas;"><span style="font-size: small;"><span style="background: transparent;">bandcamp.com/flyingwalrus</a></td></tr>  
 
 
 </tbody>
@@ -161,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
