--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2018.jpg" border="0" alt="records_2018.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2019.jpg" border="0" alt="calendar_2019.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift;">n/a</p></font></td>
 </tr>
   
 <tr><td><br><hr><hr></td></tr>
@@ -161,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
