--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2024.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2024.jpg" border="0" alt="records_2024.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 200px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 200px; margin-top:0cm; margin-bottom:0.5cm; margin-left:1.5cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
@@ -125,8 +125,8 @@
 </tr>
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2018.jpg" border="0" alt="records_2018.jpg"></img></a></td>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift;">n/a</p></font></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2018.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2018.jpg" border="0" alt="records_2018.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
 </tr>
   
 <tr><td><br><hr><hr></td></tr>
@@ -161,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
