--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2024.jpg" border="0" alt="cover_2024.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2024.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2024.jpg" border="0" alt="records_2024.jpg"></img></a></td>
-<td><a target="_blank" href=""><img style="width: 200px; margin-top:0cm; margin-bottom:0.5cm; margin-left:1.5cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
+<td><a target="_blank" href=""><img style="width: 200px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/calendar_2025.jpg" border="0" alt="calendar_2025.jpg"></img></a></td>
 </tr>
 
 <tr><td><br><hr><br><br></td></tr>
@@ -126,7 +126,72 @@
 <tr>
 <td><a target="_blank" href=""><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm;" src="img/cover_2018.jpg" border="0" alt="cover_2018.jpg"></img></a></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2018.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2018.jpg" border="0" alt="records_2018.jpg"></img></a></td>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm; font-weight:bold;">/// 2017 ///</p></font>
+</td>
+</tr>
+<tr>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2017.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2017.jpg" border="0" alt="records_2017.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm; font-weight:bold;">/// 2016 ///</p></font>
+</td>
+</tr>
+<tr>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2016.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2016.jpg" border="0" alt="records_2016.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm; font-weight:bold;">/// 2015 ///</p></font>
+</td>
+</tr>
+<tr>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2015.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2015.jpg" border="0" alt="records_2015.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm; font-weight:bold;">/// 2014 ///</p></font>
+</td>
+</tr>
+<tr>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2014.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2014.jpg" border="0" alt="records_2014.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+</tr>
+
+<tr><td><br><hr><br><br></td></tr>
+
+<tr>
+<td>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0cm; font-weight:bold;">/// 2013 ///</p></font>
+</td>
+</tr>
+<tr>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
+<td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2013.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2013.jpg" border="0" alt="records_2013.jpg"></img></a></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:4.8cm;">n/a</p></font></td>
 </tr>
   
 <tr><td><br><hr><hr></td></tr>
@@ -161,6 +226,7 @@
 
 </body>
 </html>
+
 
 
 
