--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <tr>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; font-weight:bold;">/// Mixtape</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.3cm; font-weight:bold;">/// <u>Mixtape</u></p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; font-weight:bold;">/// Records</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm; font-weight:bold;">/// <u>Records</u></p></font>
 </td>
 <td>
-<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; font-weight:bold;">/// Calendar</p></font>
+<font color="#ffffff"><p style="font-size:13pt; font-family:Bahnschrift; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm; font-weight:bold;">/// <u>Calendar</u></p></font>
 </td>
 </tr>
 
@@ -137,7 +137,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2017.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2017.jpg" border="0" alt="records_2017.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -150,7 +150,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2016.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2016.jpg" border="0" alt="records_2016.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -163,7 +163,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2015.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2015.jpg" border="0" alt="records_2015.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -176,7 +176,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2014.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2014.jpg" border="0" alt="records_2014.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -189,7 +189,7 @@
 </td>
 </tr>
 <tr>
-<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2cm;">n/a</p></font></td>
+<td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:2.8cm;">n/a</p></font></td>
 <td><a target="_blank" href="https://raw.githubusercontent.com/flyingwalrus93/flyingwalrus93.github.io/refs/heads/main/img/records_2013.jpg"><img style="width: 250px; margin-top:0cm; margin-bottom:0.5cm; margin-left:0.8cm;" src="img/records_2013.jpg" border="0" alt="records_2013.jpg"></img></a></td>
 <td><font color="#ffffff"><p style="font-family:Bahnschrift; margin-left:3.8cm;">n/a</p></font></td>
 </tr>
@@ -226,6 +226,7 @@
 
 </body>
 </html>
+
 
 
 
